maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:44: error: not found: value virage
	while(virage!=0&&!estSurBiscuit){
              ^Escaper:48: error: not found: value virage
				virage=virage+1
                                ^Escaper:52: error: not found: value virage
				virage=virage-1
                                ^